Fix layout issues.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -96,7 +96,7 @@ body {
 	left: 0;
 	background-color: #fff;
 
-	z-index: -255;
+	z-index: -50;
 }
 // ----------- Agenda
 
